config/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.example.com
    http:
      paths:
      # - backend:
      #     serviceName: 
      #     servicePort: 8080

        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-service
              port:
                # name: http
                number: 8080
